# TestForPatres

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 55cf5f8a3160_init.py  c4bfb3a227b3_init.py  e1350be0dbdc_added_description_for_book.py
testforpatres/: create_db.py  database.py  dependencies.py  main.py  security.py
testforpatres/crud/: book.py  borrowed.py  reader.py  user.py
testforpatres/models/: __init__.py  book.py  borrowed_book.py  reader.py  user.py
testforpatres/routers/: auth.py  book.py  borrowed.py  reader.py
testforpatres/schemas/: __init__.py  auth.py  base.py  books.py  borrowed_books.py  readers.py  user.py
testforpatres/tests/: test_auth_protected.py  test_borrow.py
